# TTK-demo-install

./: .gitmodules  CMakeLists.txt  ReadMe.md  TTKContributorNotes.md  install.sh  install_or_update.sh  one_line_install.sh
utils/: checkout_and_patch.sh  install_ospray.sh  latest_paraview_version_for_ttk.py  one_line_install.sh  patch_command.sh
